cleanup of trend chart. Still an issue when together with control chart

--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/GetControlChart.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "ControlChart";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<h1>This is a test page</h1>
 <h2>ControlChart 1</h2>
 
 @Html.Action("_GetControlChart",new {
