--- a/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
+++ b/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
@@ -1,246 +1,243 @@
 ﻿@model EqUiWebUi.Models.LogInfo
-<div class="card">
-    <div class="card-header bg-light">
-        <h6 class="card-title">
-            Trend for location:
-            <strong>@Model.location.Trim()</strong> logcode:
-            <strong>@Model.errornum</strong> logtext:
-            <strong>@Model.logtext.Trim()</strong>
-            <a class="fas fa-wrench text-black-50" href="#" data-toggle="popover" data-placement="bottom" id="ErrorTrentCharOptionsPopover"></a>
-            <a class="far fa-calendar-alt text-black-50" id="ErrorTrentCharDatepicker" href="#"></a>
-            <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-        </h6>
-    </div>
+<div id="ChartID@(Model.refid)">
 
-    <div class="card-body" id="graphSpinner" style="position:relative">
-        <div id="gaphContainer">
-            <canvas id='graphCanvas'></canvas>
+    <div class="card">
+        <div class="card-header bg-light">
+            <h6 class="card-title">
+                Trend for location:
+                <strong>@Model.location.Trim()</strong> logcode:
+                <strong>@Model.errornum</strong> logtext:
+                <strong>@Model.logtext.Trim()</strong>
+                <a class="fas fa-wrench text-black-50 ErrorTrentCharOptionsPopover" href="#" data-toggle="popover" data-placement="bottom"></a>
+                <a class="far fa-calendar-alt text-black-50 ErrorTrentChartDatepicker" href="#"></a>
+                <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+            </h6>
+        </div>
+
+        <div class="card-body">
+            <div class="gaphContainer" style="position:relative"></div>
         </div>
     </div>
-</div>
 
-@*popover content*@
-<div class="d-none" id="ErrorTrentCharOptionsPopoverContent">
-    <div class="panel panel-body">
-        <div class="row">
-            <div class=" col-3">
-                Grouping
-            </div>
+    @*popover content*@
+    <div class="d-none ErrorTrentCharOptionsPopoverContent">
+        <div class="panel panel-body">
+            <div class="row">
+                <div class=" col-3">
+                    Grouping
+                </div>
 
-            <div class="col-9">
-                <div class="btn-group" id="btnGrouping" role="group" data-toggle="tooltip" data-placement="bottom" title="Set how the graph groups the data">
-                    <button type="button" class="btn  btn-sm btn-secondary active" id="btnGroupingAuto">auto</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingHour">hour</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingDay">day</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingWeek">week</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingMonth">month</button>
+                <div class="col-9">
+                    <div class="btn-group" id="btnGrouping" role="group" data-toggle="tooltip" data-placement="bottom" title="Set how the graph groups the data">
+                        <button type="button" class="btn  btn-sm btn-secondary active" id="btnGroupingAuto">auto</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingHour">hour</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingDay">day</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingWeek">week</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingMonth">month</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 
-
+<!--TendChartScripts-->
 <script src="~/Scripts/d3/d3.js"></script>
 <script src="~/Scripts/d3/Chart.bundle.js"></script>
 <script>
-    //global vars
-    var groupmode = 0;
-    var endDate = moment().subtract(29, 'days');
-    var startDate = moment();
-    var spinnerErrorTrent = new Spinner();
-    var ErrorTrendChart;
+//Self-Executing Anonymous Functions because this partial might be rendered multiple times on same page.
+    (function () {
+        //global vars
+        var groupmode = 0;
+        var endDate = moment().subtract(29, 'days');
+        var startDate = moment();
+        var ErrorTrendChart;
 
-    //enable popover for settings.
-    $("#ErrorTrentCharOptionsPopover").popover({
-        html: true,
-        content: function () {
-            return $('#ErrorTrentCharOptionsPopoverContent').html();
-        },
-    });
+       //setting up datetimePicker
+        $('#ChartID@(Model.refid)').find('.ErrorTrentChartDatepicker').daterangepicker({
+            "showWeekNumbers": true,
+            "showISOWeekNumbers": true,
+            "ranges": {
+                'Last 48 Hours': [moment().subtract(2, 'days'), moment()],
+                'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+                'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                'Last 100 Days': [moment().subtract(100, 'days'), moment()],
+                'Last Year': [moment().subtract(365, 'days'), moment()],
+                'Last 5Year': [moment().subtract(365 * 5, 'days'), moment()]
+            },
+            "startDate": startDate,
+            "endDate": endDate,
 
-    //get chart data
-    function getChartData(_location, _errornum, _logtekst, _logtype, _refId, _startDate, _endDate, _groupType) {
-        //start a wait spinner
-        spinnerErrorTrent.spin(document.getElementById('graphSpinner'));
-        //make ajax request
-        $.ajax({
-            type: 'GET',
-            url: "/chart/_getData" +
-            "?location=" + _location
-            + "&errornum=" + _errornum
-            + "&logtekst=" + _logtekst
-            + "&logtype=" + _logtype
-            + "&refId=" + _refId
-            + "&startDate=" + _startDate
-            + "&endDate=" + _endDate
-            + "&grouptType=" + _groupType,
-          //  data: JSON.stringify(), this stringify cause us to fail on IOS WHY ?
-            success: function (returnPayload) {
-                console && console.log("request chart data succeeded");
-                buildchart(returnPayload, "chartName");
-                //hide spinner when completes
-                spinnerErrorTrent.stop();
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                console && console.log("request chart data failed!!");
-                $("#gaphContainer").html('<div>Request failed!!</div>');
-                spinnerErrorTrent.stop();
-            },
-            dataType: "json",
-            contentType: "application/json",
-            processData: false,
-            async: true
+        }, function (end, start, label) {
+            console.log("New date range selected: " + start.format('YYYY-MM-DD') + " to " + end.format('YYYY-MM-DD') + " (predefined range: " + label + ")");
+            startDate = start;
+            endDate = end;
+            refreshChart();
         });
-    };
 
-    //build the chart Calls when ajax request ends
-    function buildchart(table, chartName) {
-        var vLabels = new Array();
-        var vData = new Array();
-
-        for (var i = table.length - 1; i >= 0; i--) {
-            vLabels.push(table[i].Label);
-            vData.push(table[i].Count)
-        }
-
-        var config = {
-            type: 'bar',
-            data: {
-                labels: vLabels,
-                datasets: [{
-                    yAxisID: 'A',
-                    position: 'left',
-                    label: "Count of fault",
-                    backgroundColor: '#2F7CCA',
-                    borderColor: '#2F7CCA',
-                    data: vData,
-                    fill: false,
-                }
-                ]
-            },
-            options: {
-                responsive: true,
-                legend: {
-                    display: false //nolegend
-                },
-                title: {
-                    display: false, //display name off!
-                    text: chartName
-                },
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                },
-                hover: {
-                    mode: 'nearest',
-                    intersect: true
-                },
-                scales: {
-                    xAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: false, //x label off
-                            labelString: '[Time]'
-                        }
-                    }],
-                    yAxes: [{
-                        display: true,
-                        id: 'A',
-                        ticks: {
-                            beginAtZero: true,
-                            // steps: 10,
-                            // stepValue: 5,
-                            //max: 200,
-                        },
-                        scaleLabel: {
-                            display: true,
-                            labelString: '[Count]'
-                        }
-                    }]
-                }
+        //enable popover for settings.
+        $('#ChartID@(Model.refid)').find(".ErrorTrentCharOptionsPopover").popover({
+            html: true,
+            content: function () {
+                return $('#ChartID@(Model.refid)').find('.ErrorTrentCharOptionsPopoverContent').html();
             }
-        };
-        //destroy chart if exists
-        if (ErrorTrendChart) {
-            ErrorTrendChart.destroy();
-        }
-        //clear the cancas just to be shure
-        $("#graphCanvas").remove();
-        //add the new canvas
-        $("#gaphContainer").append('<canvas id="graphCanvas" height="70"></canvas>');
-        //build the chart
-        var ctx = document.getElementById("graphCanvas").getContext("2d");
-        ErrorTrendChart = new Chart(ctx, config);
-    }
-
-    //refresh the chart
-    function refreshChart() {
-        getChartData("@Model.location", "@Model.errornum", "@Model.logtext.Replace("\n"," ").Replace("\r", " ").Replace("\t", " ")", "@Model.logtype",@Model.refid, moment(startDate).toISOString(), moment(endDate).toISOString(), groupmode);
-    };
-
-    //setting up datetimePicker
-    $('#ErrorTrentCharDatepicker').daterangepicker({
-        "showWeekNumbers": true,
-        "showISOWeekNumbers": true,
-        "ranges": {
-            'Last 48 Hours': [moment().subtract(2, 'days'), moment()],
-            'Last 7 Days': [moment().subtract(6, 'days'), moment()],
-            'Last 30 Days': [moment().subtract(29, 'days'), moment()],
-            'Last 100 Days': [moment().subtract(100, 'days'), moment()],
-            'Last Year': [moment().subtract(365, 'days'), moment()],
-            'Last 5Year': [moment().subtract(365*5, 'days'), moment()]
-        },
-        "startDate": startDate,
-        "endDate": endDate,
-
-    }, function (end, start, label) {
-        console.log("New date range selected: " + start.format('YYYY-MM-DD') + " to " + end.format('YYYY-MM-DD') + " (predefined range: " + label + ")");
-        startDate = start;
-        endDate = end;
-        refreshChart();
         });
 
+        //get chart data
+        function getChartData(_location, _errornum, _logtekst, _logtype, _refId, _startDate, _endDate, _groupType) {
+            //make ajax request
+            $.ajax({
+                type: 'GET',
+                url: "/chart/_getData" +
+                    "?location=" + _location
+                    + "&errornum=" + _errornum
+                    + "&logtekst=" + _logtekst
+                    + "&logtype=" + _logtype
+                    + "&refId=" + _refId
+                    + "&startDate=" + _startDate
+                    + "&endDate=" + _endDate
+                    + "&grouptType=" + _groupType,
+                success: function (returnPayload) {
+                    console && console.log("request tend chart data succeeded");
+                    buildchart(returnPayload, "TrendchartName");
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console && console.log("request trend chart data failed!!");
+                     $('#ChartID@(Model.refid)').find('.gaphContainer').html('<div>Request failed!!</div>');
+                },
+                dataType: "json",
+                contentType: "application/json",
+                processData: false,
+                async: true
+            });
+        };
 
-    //setting up groupmode events
-    $(document).on("click", "#btnGroupingAuto", function () {
-        $("#btnGrouping").find(".active").removeClass("active");
-        $("#btnGroupingAuto").addClass("active");
-        groupmode = 0;
-        refreshChart();
-    });
+        //build the chart Calls when ajax request ends
+        function buildchart(table, chartName) {
+            var vLabels = new Array();
+            var vData = new Array();
 
+            for (var i = table.length - 1; i >= 0; i--) {
+                vLabels.push(table[i].Label);
+                vData.push(table[i].Count)
+            }
 
-    $(document).on("click", "#btnGroupingHour", function () {
-        $("#btnGrouping").find(".active").removeClass("active");
-        $("#btnGroupingHour").addClass("active");
-        groupmode = 1;
-        refreshChart();
-    });
+            var config = {
+                type: 'bar',
+                data: {
+                    labels: vLabels,
+                    datasets: [{
+                        yAxisID: 'A',
+                        position: 'left',
+                        label: "Count of fault",
+                        backgroundColor: '#2F7CCA',
+                        borderColor: '#2F7CCA',
+                        data: vData,
+                        fill: false,
+                    }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    legend: {
+                        display: false //no legend
+                    },
+                    title: {
+                        display: false, //display name off!
+                        text: chartName
+                    },
+                    tooltips: {
+                        mode: 'index',
+                        intersect: false,
+                    },
+                    hover: {
+                        mode: 'nearest',
+                        intersect: true
+                    },
+                    scales: {
+                        xAxes: [{
+                            display: true,
+                            scaleLabel: {
+                                display: false, //x label off
+                                labelString: '[Time]'
+                            }
+                        }],
+                        yAxes: [{
+                            display: true,
+                            id: 'A',
+                            ticks: {
+                                beginAtZero: true
+                            },
+                            scaleLabel: {
+                                display: true,
+                                labelString: '[Count]'
+                            }
+                        }]
+                    }
+                }
+            };
+            //destroy chart if exists
+            if (ErrorTrendChart) {
+                ErrorTrendChart.destroy();
+            }
+            //clear the canvas just to be sure
+            $('#ChartID@(Model.refid)').find(".graphCanvas").remove();
+            //clear spinner.
+            $('#ChartID@(Model.refid)').find('.gaphContainer').html("");
+            //add the new canvas
+            $('#ChartID@(Model.refid)').find('.gaphContainer').append('<canvas class="graphCanvas" height="70"></canvas>');
+            //build the chart
+            var ctx = $('#ChartID@(Model.refid)').find('.graphCanvas')[0].getContext("2d");
+            ErrorTrendChart = new Chart(ctx, config);
+        }
 
-    $(document).on("click", "#btnGroupingDay", function () {
-        $("#btnGrouping").find(".active").removeClass("active");
-        $("#btnGroupingDay").addClass("active");
-        groupmode = 2;
-        refreshChart();
-    });
+        //refresh the chart
+        function refreshChart() {
+            $('#ChartID@(Model.refid)').find('.gaphContainer').html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
+            getChartData("@Model.location", "@Model.errornum", "@Model.logtext.Replace("\n"," ").Replace("\r", " ").Replace("\t", " ")", "@Model.logtype",@Model.refid, moment(startDate).toISOString(), moment(endDate).toISOString(), groupmode);
+        };
 
-    $(document).on("click", "#btnGroupingWeek", function () {
-        $("#btnGrouping").find(".active").removeClass("active");
-        $("#btnGroupingWeek").addClass("active");
-        groupmode = 3;
-        refreshChart();
-    });
+        //setting up group mode events
+        $(document).on("click", "#btnGroupingAuto", function () {
+            $("#btnGrouping").find(".active").removeClass("active");
+            $("#btnGroupingAuto").addClass("active");
+            groupmode = 0;
+            refreshChart();
+        });
 
-    $(document).on("click", "#btnGroupingMonth", function () {
-        $("#btnGrouping").find(".active").removeClass("active");
-        $("#btnGroupingMonth").addClass("active");
-        groupmode = 4;
-        refreshChart();
-    });
-    //init on doc loaded done
-    $(document).ready(function () {
-        refreshChart();
-    });
+        $(document).on("click", "#btnGroupingHour", function () {
+            $("#btnGrouping").find(".active").removeClass("active");
+            $("#btnGroupingHour").addClass("active");
+            groupmode = 1;
+            refreshChart();
+        });
+
+        $(document).on("click", "#btnGroupingDay", function () {
+            $("#btnGrouping").find(".active").removeClass("active");
+            $("#btnGroupingDay").addClass("active");
+            groupmode = 2;
+            refreshChart();
+        });
+
+        $(document).on("click", "#btnGroupingWeek", function () {
+            $("#btnGrouping").find(".active").removeClass("active");
+            $("#btnGroupingWeek").addClass("active");
+            groupmode = 3;
+            refreshChart();
+        });
+
+        $(document).on("click", "#btnGroupingMonth", function () {
+            $("#btnGrouping").find(".active").removeClass("active");
+            $("#btnGroupingMonth").addClass("active");
+            groupmode = 4;
+            refreshChart();
+        });
+
+        //init on doc loaded done
+        $(document).ready(function () {
+            refreshChart();
+        });
+    })();
 </script>
 
